--- a/Thinkful DRILLS/CHALLenge 2-2-7 -- Feedback Analysis.ipynb
+++ b/Thinkful DRILLS/CHALLenge 2-2-7 -- Feedback Analysis.ipynb
@@ -1579,6 +1579,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Do any of your classifiers seem to overfit?__\n",
+    "\n",
+    "*Naive Bayes does a good job of preventing overfitting so, I would say that my classifiers didnt overfit*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Which seem to perform the best? Why?__\n",
+    "\n",
+    "_Adding new keywords along with cleaning up the data, such as all lower case and removing puncutation and spaces. I believe the additional keywords and cleaning up helped streamline the data for easier dissection._"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Which features seemed to be most impactful to performance?__\n",
+    "\n",
+    "_Again, I think new keywords and cleaning of the data had the biggest impact._"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
